# starcite

./: .dockerignore  .formatter.exs  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  docker-compose.integration.yml  docker-compose.rust.cluster.yml  docker-compose.rust.yml  docker-compose.yml  docker-entrypoint.sh  fly.toml  mix.exs
rust/starcite-rs/: Cargo.toml  Dockerfile  README.md  spec.md
rust/starcite-rs/migrations/: 0001_init.sql  0002_session_producers.sql  0003_sessions_archived_seq.sql  0004_session_leases.sql  0005_control_nodes.sql  0006_control_nodes_public_url.sql  0007_session_leases_standby_idx.sql  0008_session_leases_replica_node_ids.sql
rust/starcite-rs/src/: archive.rs  archive_queue.rs  auth.rs  config.rs  control_plane.rs  error.rs  event_http.rs  fanout.rs  flusher.rs  hot_store.rs  lifecycle_http.rs  lifecycle_scope.rs  main.rs  model.rs  ops.rs  ops_http.rs  owner_proxy.rs  ownership.rs  phoenix.rs  phoenix_context.rs  phoenix_protocol.rs  phoenix_socket.rs  phoenix_topics.rs  raw_socket.rs  read_path.rs  relay.rs  replica_store.rs  replication.rs  repository.rs  runtime.rs  session_http.rs  session_manager.rs  session_store.rs  socket_runtime.rs  socket_support.rs  telemetry.rs  web.rs
rust/starcite-rs/src/api/: edge_routing.rs  event_http.rs  lifecycle_http.rs  lifecycle_scope.rs  mod.rs  ops_http.rs  phoenix.rs  phoenix_context.rs  phoenix_protocol.rs  phoenix_socket.rs  phoenix_topics.rs  public_payload.rs  query_options.rs  raw_socket.rs  request_metrics.rs  request_validation.rs  session_http.rs  socket_cursor.rs  socket_runtime.rs  tail_ws.rs
rust/starcite-rs/src/app/: mod.rs
rust/starcite-rs/src/cluster/: control_plane.rs  mod.rs  owner_proxy.rs  ownership.rs  relay.rs  replication.rs
(+487 files in other folders)
